k8s/alpha/nuxtofficialpaltform-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: universalframework-nuxtofficialpaltform
spec:
  rules:
  - host: nplatformoffical.qkagame.com
    http:
      paths:
      - backend:
          serviceName: universalframework-nuxtofficialpaltform
          servicePort: 80
        path: /
